# cookiecutter-uv-python

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/.agents/skills/pm2/: SKILL.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/.agents/skills/pre-commit/: SKILL.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/.agents/skills/pyright/: SKILL.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/.agents/skills/pytest/: SKILL.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/.agents/skills/ruff/: SKILL.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/.agents/skills/uv/: SKILL.md
