[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">= {{ cookiecutter.python_version }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
dependencies = [
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]
include = ["src/{{ cookiecutter.project_slug }}/.agents/**/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-watch>=4.2.0",
    "pre-commit>=3.7.0",
    "ruff>=0.4.0",
    "pyright>=1.1.360",
]

[tool.ruff]
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N", "RUF"]
ignore = ["E501", "N802", "N803", "N806", "B905", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]

[tool.pyright]
pythonVersion = "{{ cookiecutter.python_version }}"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks integration tests requiring external resources",
]
